<resources>
    <string name="app_name">04Ejercicio crear pisos</string>

    <string name="rellenarPiso">RELLENAR PISO</string>
    <string name="direccion">Direccion</string>
    <string name="numero">Número</string>
    <string name="ciudad">Ciudad</string>
    <string name="provincia">Provincia</string>
    <string name="cp">CP</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear">Crear</string>
    <string name="editar">Editar</string>
</resources>